# GPU-LBMsim

./: CMakeLists.txt  LBM.h  LICENSE  Makefile  README.md  dconfig  main.cpp  utils.h
docs/html/: annotated.html  classes.html  core_8cpp_source.html  core_8hpp_source.html  core__gpu_8cu_source.html  core__gpu_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  index.html  init_8cpp_source.html  init_8hpp_source.html  init__gpu_8cu_source.html  init__gpu_8hpp_source.html  main_8cpp_source.html  main__gpu_8cu_source.html  menudata.js  structinput__struct-members.html  structinput__struct.html  structuse__LES.html  structuse__LES_3_01false_01_4.html  structuse__MRT.html  structuse__MRT_3_01false_01_4.html  utils_8cpp_source.html  utils_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  classes_0.js  classes_1.js  searchdata.js
docs/latex/: annotated.tex  refman.tex  structinput__struct.tex  structuse__LES.tex  structuse__LES_3_01false_01_4.tex  structuse__MRT.tex  structuse__MRT_3_01false_01_4.tex
include/: core.h  core.hpp  core_gpu.hpp  init.h  init.hpp  init_gpu.hpp  utils.h  utils.hpp  utils_gpu.hpp
input/: CPU_benchmark.in  GPU_benchmark.in  Poiseuille.in  benchmark.in  inputfile.in
plotting/: read_and_animate.py
scripts/: CPU_benchmark.sh  GPU_benchmark.sh  Poiseuille.sh  Poiseuille_benchmark.py  cylinder_flow_gpu.sh  velocity_validation.py  velocity_validation.sh
src/: CMakeLists.txt  core.cpp  core_gpu.cu  init.cpp  init_gpu.cu  main.cpp  main_gpu.cu  utils.cpp  utils_gpu.cu
tests/: CMakeLists.txt  test.cpp
